<?xml version="1.0" encoding="utf-8"?>
<!--
 # Version 1.2
 # Copyright (C) 2012 Enrico Candino ( enrico.candino@gmail.com )
 #
 # This file is part of "Roma Tre".
 # "Roma Tre" is released under the General Public Licence V.3 or later
 #
 # @author Enrico Candino
 #
-->
<PreferenceScreen xmlns:holo="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory holo:title="Visualizzazione">

        <ListPreference holo:key="theme"
                        holo:title="Tema"
                        holo:summary="Scegli un tema disponibile\n(Necessità il riavvio)"
                        holo:entries="@array/themeOptions"
                        holo:entryValues="@array/themeValues" />

        <CheckBoxPreference holo:key="rss_autoscroll"
                            holo:title="Autoscroll"
                            holo:summary="@string/autoscroll"/>
    </PreferenceCategory>

    <PreferenceCategory
            holo:key="storage"
            holo:title="Salvataggio">

        <CheckBoxPreference
                holo:key="saveOnSd"
                holo:title="Salvataggio su sd"
                holo:summary="Abilita salvataggio su SD card"
                holo:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory
            holo:key="restart_category"
            holo:title="Restart">

        <Preference
                holo:key="restart"
                holo:title="Riavvia"
                holo:summary="@string/restart"/>
    </PreferenceCategory>

    <PreferenceCategory
            holo:key="info_category"
            holo:title="Informazioni">

        <Preference
                holo:key="version"
                holo:title="Versione"
                holo:summary="@string/versionName"/>
    </PreferenceCategory>

</PreferenceScreen>